<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow>

        <TextView
            android:layout_width="204dp"
            android:padding="3dp"
            android:text="@string/table_layout_4_open" />
        <TextView
            android:text="@string/table_layout_4_open_shortcut"
            android:gravity="right"
            android:padding="3dp" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="202dp"
            android:padding="3dp"
            android:text="@string/table_layout_4_save" />
        <TextView
            android:text="@string/table_layout_4_save_shortcut"
            android:gravity="right"
            android:padding="3dp" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="202dp"
            android:padding="3dp"
            android:text="@string/table_layout_4_save_as" />
        <TextView
            android:text="@string/table_layout_4_save_as_shortcut"
            android:gravity="right"
            android:padding="3dp" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="202dp"
            android:padding="3dp"
            android:text="@string/table_layout_4_import" />
        <TextView
            android:text="@string/table_layout_4_import_shortcut"
            android:gravity="right"
            android:padding="3dp" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="202dp"
            android:padding="3dp"
            android:text="@string/table_layout_4_export" />
        <TextView
            android:text="@string/table_layout_4_export_shortcut"
            android:gravity="right"
            android:padding="3dp" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="202dp"
            android:padding="3dp"
            android:text="@string/table_layout_4_quit" />
        <TextView
            android:text="@string/table_layout_4_quit_shortcut"
            android:gravity="right"
            android:padding="3dp" />
    </TableRow>
</TableLayout>